--- a/birds.html
+++ b/birds.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+  
    <div class="container">
     <div class="row">
        <div class="col-sm-2 ">D</div>
@@ -104,10 +105,21 @@
           </tr>
         </tbody>
       </table>
-     
-    </div>
-
-
+      <div class="btn-toolbar" role="toolbar" aria-label="Buttons in group">
+        <div class="btn-success" aria-label="Success Buttons">
+            <button type="button" class="btn">A</button>
+            <button type="button" class="btn">S</button>
+            <button type="button" class="btn">A</button>
+          </div>
+          <div class="btn-warning" aria-label="Warning Buttons">
+            <button type="button" class="btn">D</button>
+            <button type="button" class="btn">R</button>
+          </div>
+         <div class="btn-danger" aria-label="Danger Buttons">
+            <button type="button" class="btn">I</button>
+            </div>
+          </div>
+         
 
 
 </body>
