--- a/birds.html
+++ b/birds.html
@@ -143,21 +143,24 @@
           <li><a class="dropdown-item" href="advanced.html">Adavanced Html</a></li>
         </ul>
       </div>
-      <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="birds.html">Interesting birds</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav mr-auto">
-      <li class="nav-link">
-        <a class="nav-link active" aria-current="page" href="basic.html">Basic</a>
-      </li>
-      <li class="nav-link">
-        <a class="nav-link active" aria-current="page" href="advanced.html">Advanced</a>
-      </li>
-   </ul>
+      
+ 
+<form>
+  <div class="form-group">
+    <label for="EmailLogin">Email address</label>
+    <input type="email" class="form-control" id="Email" aria-describedby="emailaddress" placeholder="Enter your email address">
+    <small id="emailaddress" class="form-text text-muted">We wont share your email with anyone.</small>
   </div>
+  <div class="form-group">
+    <label for="Password">Bird</label>
+    <input type="text" class="form-control" id="Password" placeholder="Enter your bird">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="checkin">
+    <label class="form-check-label" for="Checkin">Sign up for newsletter?</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
          
 
