images with description added

--- a/birds.html
+++ b/birds.html
@@ -161,6 +161,30 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+ <div class="card-group">
+  <div class="card">
+    <img class="card-img-top" src="Abbott'sbabbler.jpg" class="img-fluid" alt="Abbott's babbler">
+    <div class="card-body">Abbott's babbler (Malacocincla abbotti) is a species of bird in the family Pellorneidae. It is widely distributed along the Himalayas in South Asia and extending into the forests of Southeast Asia. They are short-tailed and stout birds which forage in pairs in dense undergrowth close to the ground and their presence is indicated by their distinctive calls.<h2>Abbott's babbler</h2>
+    <p class="card-text"></p>
+   <a class="btn btn-primary" href="https://en.wikipedia.org/wiki/Abbott%27s_babbler">Read More</a>
+  </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="Sabota_Lark.jpg" class="img-fluid" alt="Sabota_Lark">
+    <div class="card-body"><h2>Sabota_Lark.jpg</h2>
+    <p class="card-text">The sabota lark (Calendulauda sabota) is a species of lark in the family Alaudidae. It is found in southern Africa in its natural habitats of dry savannah, moist savannah, and subtropical or tropical dry shrubland.</p>
+    <a class="btn btn-primary" href="https://en.wikipedia.org/wiki/Sabota_lark">Read More</a>
+  </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="Abd al-Kuri sparrow.jpg" class="img-fluid" alt="Abd al-Kuri sparrow">
+    <div class="card-body"><h2>Abd al-Kuri sparrow.jpg</h2>
+    <p class="card-text">The Abd al-Kuri sparrow (Passer hemileucus) is a passerine bird endemic to the small island of Abd al Kuri (also spelled several other ways) in the Socotra archipelago of the Indian Ocean, off the Horn of Africa</p>
+    <a class="btn btn-primary" href="https://en.wikipedia.org/wiki/Abd_al-Kuri_sparrow">Read More</a>
+  </div>
+  </div>
+</div>
+
 
          
 
